# grpc

./: .gitignore  CLAUDE.md  CMakeLists.txt  meson.build  pyproject.toml  setup.py
.claude/skills/eugo-build-and-test/: SKILL.md
.claude/skills/eugo-grpcio-tools-migration/: SKILL.md
.claude/skills/eugo-meson-build-review/: SKILL.md
.claude/skills/eugo-rebuild/: SKILL.md
.claude/skills/eugo-upstream-merge/: SKILL.md
.claude/skills/eugo-wheel-validation/: SKILL.md
.github/: copilot-instructions.md
cmake/: gRPCConfig.cmake.in
src/core/util/: log.cc
src/python/grpcio/: commands.py
src/python/grpcio/grpc/: _grpcio_metadata.py
src/python/grpcio_observability/: meson.build  pyproject.toml
tools/distrib/python/: .gitignore
tools/distrib/python/grpcio_tools/: .gitignore  eugo_copy_sources.py  meson.build  pyproject.toml  setup.py
