# Copyright 2025 gRPC authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# @EUGO_CHANGE: @begin: Replaced setuptools with meson-python build backend.
[build-system]
build-backend = 'mesonpy'
requires = [
    'meson_python>=0.17.1',
    'meson>=1.8.0',
    'cmake>=3.18',
    'cython>=3.1.1',
]


[project]
name = 'grpcio'
readme = 'README.md'
requires-python = '>=3.12'
dynamic = ["version"]
authors = [
    {name = "Eugo, Inc."},
]
dependencies = [
    'typing-extensions~=4.12',
]


[project.optional-dependencies]
protobuf = [
    'grpcio_tools'
]
# @EUGO_CHANGE: @end